--- a/style/style.css
+++ b/style/style.css
@@ -6,30 +6,33 @@
   font-weight: 400;
   font-style: normal;
 }
+
 /* Shared styles */
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
 /* nav style */
-.nav{
+.nav {
   display: flex;
   justify-content: space-between;
   margin-top: 36px;
   align-items: center;
 }
-.nav-links{
+
+.nav-links {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   font-size: 20px;
   justify-content: space-evenly;
   margin: 16px auto;
   gap: 32px;
 }
-.navbar{
+
+.navbar {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   width: 200px;
   height: 60px;
   text-align: center;
@@ -38,10 +41,12 @@ a{
   margin-left: 141px;
   margin-top: auto;
 }
+
 .logo-name {
   font-weight: 700;
   font-size: 32px;
 }
+
 .nav-btn {
   width: 190px;
   height: 50px;
@@ -57,20 +62,24 @@ a{
   text-align: center;
   border: 1px solid #FEA301;
 }
-.link-1{
+
+.link-1 {
   color: #FEA301;
   font-weight: 700;
 
 }
-.link-2{
+
+.link-2 {
   color: #01ACFD;
   font-weight: 500;
 }
-.link-3{
+
+.link-3 {
   color: #05d4df;
   font-weight: 500;
 }
-.link-4{
+
+.link-4 {
   color: #5d58ef;
   font-weight: 500;
 }
@@ -88,23 +97,27 @@ a{
   justify-content: space-between;
   border: 1px solid white;
 }
+
 .banner-content {
   width: 700px;
   height: 400px;
   margin: 150px auto;
 }
+
 .banner-title {
   width: 700px;
   height: auto;
   font-size: 64px;
   font-weight: 700;
 }
-.banner-para{
+
+.banner-para {
   font-size: 20px;
   font-weight: 400;
   margin-top: 24px;
 }
-.banner-btn{
+
+.banner-btn {
   width: 200px;
   height: 50px;
   padding: 10px;
@@ -116,24 +129,154 @@ a{
   line-height: 30px;
   border: none;
 }
-#emp{
+
+#emp {
   color: #FEA301;
 }
-#t-v{
+
+#t-v {
   color: #01ACFD;
 }
+
 .banner img {
   width: 550px;
   height: auto;
 }
 
 /* Standard Curriculum styles */
+.standard-curriculum{
+  background-image: url(../assets/bg.png);
+  justify-content: center;
+  align-items: center;
+}
+.card-container {
+  width: 100%;
+  max-width: 1440px;
+  height: 900px;
+  padding: 60px 0;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
 
+.sc-title {
+  text-align: center;
+  font-size: 46px;
+  font-weight: 700;
+  color: #000000;
+  margin-bottom: 80px;
+  
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 80px;
+  width: 1200px;
+  height: 500px;
+  margin: 80px 400px;
+  border-radius: 18px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.card-1 {
+  box-shadow: 0 0 29px 0.94px rgba(0, 0, 0, 0.05);
+  background-color: #def5ff;
+  border-radius: 19px;
+  width: 368px;
+  height: 480px;
+}
+
+.card-2 {
+  box-shadow: 0 0 29px 0.94px rgba(0, 0, 0, 0.05);
+  background-color: #fff4dc;
+  border-radius: 19px;
+  width: 368px;
+  height: 480px;
+}
+
+.card-3 {
+  box-shadow: 0 0 29px 0.94px rgba(0, 0, 0, 0.05);
+  background-color: #f2e8ff;
+  border-radius: 19px;
+  width: 368px;
+  height: 480px;
+
+}
+
+.card-title {
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #202020;
+}
+.cards img{
+  padding-top: 50px;
+}
+.card-para {
+  font-weight: 500;
+  font-size: 15px;
+  color: #808080;
+  line-height: 28px;
+}
+.card-small-para-1 {
+  color: #64c8ff;
+}
+.card-small-para-2 {
+  color: #f0aa00;
+}
+.card-small-para-3 {
+  color: #8700ff;
+}
+.btn-left, .btn-right {
+  width: 50px;
+  height: 50px;
+  background-color: #FEA301;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: white;
+  font-size: 20px; 
+  font-weight: bold;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s ease;
+}
+.btn-left:hover, .btn-right:hover {
+  transform: scale(1.1);
+}
+.btn-left::before {
+  content: '←';
+}
+.btn-right::before {
+  content: '→';
+}
+.buttons-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: -350px;
+  margin-right: -120px;
+}
 
 /* Our Stories style */
 
 
 /* Footer styles */
 @media screen and (max-width:576px) {
-    
+  .cards {
+    grid-template-columns: 1fr;
+    gap: 20px;
+    width: 100%;
+    margin: 20px auto;
+  }
+
+  .card-1, .card-2, .card-3 {
+    padding: 20px;
+  }
+  
 }
