sorry not sorry

--- a/style/style.css
+++ b/style/style.css
@@ -347,14 +347,87 @@ a {
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s;
+
 }
 .view-all-btn:hover {
   background-color: #444;
 }
 
-
-
 /* Footer styles */
+footer {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-content: space-between;
+  background-color: #00AEEF;
+  color: white;
+  padding: 125px 100px 0 140px;
+  font-family: Arial, sans-serif;
+  height: 320px;
+  gap: 20px;
+}
+
+.footer-left, .footer-center, .footer-right {
+  flex: 1;
+  padding: 10px;
+}
+
+.footer-left-top {
+  display: flex;
+  align-items: center;
+}
+
+.footer-left-top img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.footer-left h3 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.footer-para {
+  font-size: 14px;
+  line-height: 1.5;
+  margin-top: 10px;
+}
+
+.footer-center h4, .footer-right h4 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.footer-center ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-center ul li {
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.footer-right .logo {
+  display: flex;
+  gap: 10px;
+}
+
+.footer-right .logo img {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.footer-right .logo img:hover {
+  transform: scale(1.1);
+}
+
+
+
 @media screen and (max-width:576px) {
   .cards {
     grid-template-columns: 1fr;
